# PCBAI

./: #auto_saved_files#  .gitignore  ARDUINO_SYMBOL_FIX.md  AUTO_VERIFICATION_COMPLETE.md  CLAUDE_CODE_INSTRUCTIONS.md  CLAUDE_CODE_QUICKSTART.md  CLAUDE_PROMPTS_README.md  DIALOG_MODE.md  FINAL_COMPLETE_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_PLAN.md  MARCH_2026_STATUS.md  PHASE1_COMPLETE.md  PLAN_COMPLETE.md  PROJECT_STATUS.md  QUICKSTART.md  QWEN_CODE_START_HERE.md  README.md  WORK_SUMMARY.md  WORK_SUMMARY_COMPLETE.md  planner_human.md  planner_state.json  pyproject.toml  requirements_ml.txt  setup.bat  setup.sh  test_ai_generator.py  train.py
.bin/: #auto_saved_files#  API_SETUP.md  CUSTOM_SYMBOL_GUIDE.md  READY_TO_USE.md  SYMBOL_FORMAT_REFERENCE.md  test_google_api.py
.claude_prompts/: AI_CIRCUIT_ANALYSIS_ENHANCEMENT.md  COMPLETE_SYSTEM_FIX_PLAN.md  CRITICAL_FIX_PLAN.md  FIX_FREEROUTING_AND_COMPLETE.md  HANDOFF_PROGRESS.md  PHASE2_DETAILED_PLAN.md  PROGRESS.md  QWEN_CODE_PLAN.md  schematic_full.md  schematic_generation.md
agent_state/: HANDOFF.md  PLAN.md  SESSION.md  project_progress.json  project_state.md  task_log.md
datasets/: schematic_generation.json  synthetic_dataset.json
docs/: COMPLETE_TRAINING_GUIDE.md  DATASET_1000_PLAN.md  TRAINING_GUIDE.md  VALIDATION_SYSTEM.md  colab_test_after_training.py  colab_training.ipynb.md  colab_training_30k.py  colab_training_code.py  model_selection.md
examples/: __init__.py  simple_led_routed.kicad_prl
knowledge_base/: README.md  components.json  config.json  generate_components.py
tests/: __init__.py  (+6 more)
(+39 files in other folders)
