[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcba"
version = "0.1.0"
description = "AI-powered PCB design tool for KiCad with automatic routing"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "sexpdata>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
pcba = "pcba.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
